# recruitgpt-x

./: .env.deploy.example  .env.example  .env.production.example  .gitignore  JUDGES.md  README.md  docker-compose.ranker.yml  docker-compose.yml  ngrok.yml  pyproject.toml  rank.py  render.yaml  requirements-ranker.txt  requirements.txt  submission.csv  submission_metadata.yaml
backend/: .env.example  README.md  railway.toml  requirements-minimal.txt  requirements.txt
challenge/: __init__.py  assessment.py  availability.py  career_blurb.py  data_paths.py  embeddings.py  eval_harness.py  features.py  honeypot.py  jd_config.py  redrob_ranker.py  rerank.py  semantic.py  test_ranker.py  text_match.py
config/: __init__.py  defaults.py
data/: .challenge_source  README.docx  README.md  SUBMISSION_ARTIFACT.sha256  candidate_schema.json  eval_report.json  hand_labels.json  job_description.docx  redrob_signals_doc.docx  sample_candidates.json  sample_submission.csv  submission_metadata_template.yaml  submission_spec.docx  synthetic_proxy_labels.json  validate_submission.py
docker/: Dockerfile.ranker
docs/: API.md  ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOY.md  EVALUATION.md  INTERVIEW_PREP.md  PITCH_DECK.md  PRESENTATION_STRATEGY.md  RecruitGPT_X_Approach.pptx  Schadn_Redrob_Submission.pptx  WIREFRAMES.md  audit_resolution_checklist.md  evaluation_honesty_statement.md  evaluation_limitations.md  hardening_changes_report.md  judge_faq.md  precompute_policy.md  reasoning_diversity_report.md  stage5_interview_prep.md
frontend/: .env.local.example  .env.production.example  (+8 more)
(+211 files in other folders)
